# internship

./: .gitignore  README.md
ansible_test/: hosts  pwd_playbook.yaml  pwd_playbook.yml  run.sh
ansible_test/roles/pwd/tasks/: main.yml
aserver/: pyproject.toml  server.py  storm.py
aserver/aserver/: application.py  start_server.py  urls.py  views.py
aserver/tests/: storm.py  test_aserver.py
finite_field/: finite_field.py  test_finite_field.py
git_reverse/: generate_repo.py  git_reverse.py  git_reverse_branch.py
