[tool.poetry]
name = "aserver"
version = "0.1.0"
description = ""
authors = ["pharick <artemforkunov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
