[tool.poetry]
name = "aserver"
version = "0.1.0"
description = ""
authors = ["pharick <artemforkunov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-aiohttp = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
